--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Canvas Gauges -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-gauges@2.1.7/gauge.min.js"></script>
 
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <style>
     body {
       background:#f5f5f5;
@@ -18,7 +21,7 @@
     h2 {
       text-align:center;
       color:#222;
-      margin-bottom:5px;
+      margin-bottom:10px;
     }
     .container {
       display:flex;
@@ -35,6 +38,15 @@
       text-align:center;
       box-shadow:0 3px 10px rgba(0,0,0,0.12);
     }
+    .chart-container {
+      width:90%;
+      max-width:900px;
+      background:#fff;
+      margin:25px auto;
+      padding:20px;
+      border-radius:12px;
+      box-shadow:0 3px 10px rgba(0,0,0,0.12);
+    }
   </style>
 </head>
 <body>
@@ -44,39 +56,44 @@
 
 <div class="container">
 
-  <!-- 🔥 SUHU MESIN -->
+  <!-- SUHU: Hijau -->
   <div class="gauge-box">
     <canvas id="gSuhu" data-type="radial-gauge"
       data-width="220" data-height="220"
       data-min-value="0" data-max-value="150"
       data-major-ticks="0,25,50,75,100,125,150"
       data-units="°C" data-title="Suhu Mesin"
-      data-value="0" data-color-value="#f44336"
+      data-value="0" data-color-value="#00c851"
       data-glow="true"></canvas>
   </div>
 
-  <!-- ⚡ TEGANGAN OUTPUT -->
+  <!-- TEGANGAN: Biru -->
   <div class="gauge-box">
     <canvas id="gVolt" data-type="radial-gauge"
       data-width="220" data-height="220"
       data-min-value="0" data-max-value="300"
       data-major-ticks="0,50,100,150,200,250,300"
       data-units="V" data-title="Tegangan Output"
-      data-value="0" data-color-value="#2196F3"
+      data-value="0" data-color-value="#007bff"
       data-glow="true"></canvas>
   </div>
 
-  <!-- 🔄 RPM MESIN -->
+  <!-- RPM: Kuning -->
   <div class="gauge-box">
     <canvas id="gRPM" data-type="radial-gauge"
       data-width="220" data-height="220"
       data-min-value="0" data-max-value="6000"
       data-major-ticks="0,1000,2000,3000,4000,5000,6000"
       data-units="RPM" data-title="Putaran Mesin"
-      data-value="0" data-color-value="#4CAF50"
+      data-value="0" data-color-value="#fdd835"
       data-glow="true"></canvas>
   </div>
 
+</div>
+
+<!-- ================= GRAFIK ================= -->
+<div class="chart-container">
+  <canvas id="chartMonitor"></canvas>
 </div>
 
 <script>
@@ -87,15 +104,71 @@ window.onload = () => {
     const gVolt = g[1];
     const gRPM  = g[2];
 
-    setInterval(() => {
-      // ===== SIMULASI DATA =====
-      let suhu = 60 + Math.random()*50;         // 60–110°C
-      let volt = 180 + Math.random()*70;        // 180–250V (Output generator)
-      let rpm  = 1000 + Math.random()*4000;     // 1000–5000 RPM
+    const ctx = document.getElementById('chartMonitor').getContext('2d');
 
+    const chart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: [],
+        datasets: [
+          {
+            label: 'Suhu (°C)',
+            data: [],
+            borderWidth: 2,
+            borderColor: '#00c851',
+            backgroundColor: 'rgba(0,200,81,0.2)'
+          },
+          {
+            label: 'Tegangan (V)',
+            data: [],
+            borderWidth: 2,
+            borderColor: '#007bff',
+            backgroundColor: 'rgba(0,123,255,0.2)'
+          },
+          {
+            label: 'RPM',
+            data: [],
+            borderWidth: 2,
+            borderColor: '#fdd835',
+            backgroundColor: 'rgba(253,216,53,0.2)'
+          }
+        ]
+      },
+      options: {
+        responsive: true,
+        animation: false,
+        scales: {
+          x: { title: { display: true, text: 'Waktu (s)' } },
+          y: { title: { display: true, text: 'Nilai' } }
+        }
+      }
+    });
+
+    let time = 0;
+
+    setInterval(() => {
+      // Simulasi data
+      let suhu = 60 + Math.random()*50;
+      let volt = 180 + Math.random()*70;
+      let rpm  = 1000 + Math.random()*4000;
+
+      // Update gauge
       gSuhu.value = suhu;
       gVolt.value = volt;
       gRPM.value  = rpm;
+
+      // Update grafik
+      chart.data.labels.push(time++ + 's');
+      chart.data.datasets[0].data.push(suhu);
+      chart.data.datasets[1].data.push(volt);
+      chart.data.datasets[2].data.push(rpm);
+
+      if (chart.data.labels.length > 20) {
+        chart.data.labels.shift();
+        chart.data.datasets.forEach(d => d.data.shift());
+      }
+
+      chart.update();
 
     }, 1000);
 
